--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity
             android:name=".UserProfile"
             android:label="@string/title_activity_user_profile"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".QuestionPracticeActivity"
+            android:label="@string/title_activity_question_practice"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
