--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,10 @@
             android:name=".UserProfile"
             android:label="@string/title_activity_user_profile"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".QuestionPracticeActivity"
-            android:label="@string/title_activity_question_practice"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Professional1stActivity" />
+        <activity android:name=".Professional2ndActivity" />
+        <activity android:name=".Professional3rdActivity" />
+        <activity android:name=".Professional4thActivity"></activity>
     </application>
 
 </manifest>
