--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         <activity android:name=".Professional2ndActivity" />
         <activity android:name=".Professional3rdActivity" />
         <activity android:name=".Professional4thActivity" />
-        <activity android:name=".ProfessionalsSpinnerActivity"></activity>
+        <activity android:name=".ProfessionalsSpinnerActivity" />
+        <activity
+            android:name=".DifferentMaterialsActivity"
+            android:label="@string/title_activity_different_materials"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
