admin study backend integrated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,10 @@
         <activity android:name=".RandomQuestionSetActivity" />
         <activity android:name=".QuestionsActivity" />
         <activity android:name=".AdminHomeActivity" />
-        <activity android:name=".AdminStudyActivity" />
-        <activity android:name=".AdminDepartmentActivity"></activity>
+        <activity android:name=".AdminStudyActivity"
+            android:parentActivityName=".AdminHomeActivity"/>
+        <activity android:name=".AdminDepartmentActivity"
+            android:parentActivityName=".AdminHomeActivity"></activity>
     </application>
 
 </manifest>
