Separate Layout for different types created and data passed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,10 @@
         <activity
             android:name=".AdminDepartmentActivity"
             android:parentActivityName=".AdminHomeActivity" />
-        <activity android:name=".StudyAlteringActivity"></activity>
+        <activity android:name=".MCQsAlteringActivity" />
+        <activity android:name=".RecordsAlteringActivity" />
+        <activity android:name=".PracticalAlteringActivity" />
+        <activity android:name=".PYQsActivity"></activity>
     </application>
 
 </manifest>
