--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.14'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
