--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.14'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    //implementation 'org.apache.commons:commons-io:1.3.2'
 }
 
 
