sets recycler view working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
         <activity android:name=".AddingOptionCActivity" />
         <activity android:name=".AddingOptionDActivity" />
         <activity android:name=".AddingExplanationActivity" />
-        <activity android:name=".PDFEditingActivity"></activity>
+        <activity android:name=".PDFEditingActivity" />
+        <activity android:name=".ListOfSetsActivity"></activity>
     </application>
 
 </manifest>
