--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.14'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //implementation 'org.apache.commons:commons-io:1.3.2'
 }
 
