mocktest activity created in each professional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         <activity android:name=".UserProfessionalThirdOneActivity" />
         <activity android:name=".UserProfessionalThirdTwoActivity" />
         <activity android:name=".ChaptersActivity" />
+        <activity android:name=".MockTestActivity"></activity>
     </application>
 
 </manifest>
