--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,8 @@
         <activity android:name=".UserProfessionalThirdOneActivity" />
         <activity android:name=".UserProfessionalThirdTwoActivity" />
         <activity android:name=".ChaptersActivity" />
-        <activity android:name=".MockTestActivity"></activity>
+        <activity android:name=".MockTestActivity" />
+        <activity android:name=".AdminMedicalRelatedPicsActivity"></activity>
     </application>
 
 </manifest>
