--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
         <activity android:name=".ChaptersActivity" />
         <activity android:name=".MockTestActivity" />
         <activity android:name=".AdminMedicalRelatedPicsActivity" />
-        <activity android:name=".AddingMedicalRelatedPicAdminActivity"></activity>
+        <activity android:name=".AddingMedicalRelatedPicAdminActivity" />
+        <activity android:name=".AdminDoctorsDetails"></activity>
     </application>
 
 </manifest>
