--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     //implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
 
 
