--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,9 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.14'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    //implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'org.apache.commons:commons-io:1.3.2'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 }
 
 
