--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,8 @@
         <activity android:name=".YouTubePlayerViewActivity" />
         <activity android:name=".PDFViewerActivity" />
         <activity android:name=".NewQuestionActivity" />
-        <activity android:name=".AdminQuestionDetailsActivity"></activity>
+        <activity android:name=".AdminQuestionDetailsActivity" />
+        <activity android:name=".UserQuestionActivity"></activity>
     </application>
 
 </manifest>
