AppBar colour changed and Activity Title added in some activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".UserProfile"
-            android:label="@string/title_activity_user_profile"
+            android:label="Home"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Professional1stActivity" />
         <activity android:name=".Professional2ndActivity" />
@@ -49,17 +49,28 @@
         <activity android:name=".HardQuestionSetActivity" />
         <activity android:name=".RandomQuestionSetActivity" />
         <activity android:name=".QuestionsActivity" />
-        <activity android:name=".AdminHomeActivity" />
-        <activity android:name=".AdminStudyActivity" />
-        <activity android:name=".AdminDepartmentActivity" />
-        <activity android:name=".MCQsAlteringActivity" />
-        <activity android:name=".RecordsAlteringActivity" />
-        <activity android:name=".PracticalAlteringActivity" />
-        <activity android:name=".PYQsAlteringActivity" />
-        <activity android:name=".SetsAlteringActivity" />
-        <activity android:name=".ListOfRecordsActivity" />
-        <activity android:name=".ListOfPracticalsActivity" />
-        <activity android:name=".ListOfPYQsActivity" />
+        <activity android:name=".AdminHomeActivity"
+            android:label="Admin Panel"/>
+        <activity android:name=".AdminStudyActivity"
+            android:label="Study Section"/>
+        <activity android:name=".AdminDepartmentActivity"
+            android:label="Department Section"/>
+        <activity android:name=".MCQsAlteringActivity"
+            android:label="Add MCQ"/>
+        <activity android:name=".RecordsAlteringActivity"
+            android:label="Add Record"/>
+        <activity android:name=".PracticalAlteringActivity"
+            android:label="Add Practical"/>
+        <activity android:name=".PYQsAlteringActivity"
+            android:label="Add PYQ"/>
+        <activity android:name=".SetsAlteringActivity"
+            android:label="Add Set"/>
+        <activity android:name=".ListOfRecordsActivity"
+            android:label="List of Records"/>
+        <activity android:name=".ListOfPracticalsActivity"
+            android:label="List of Practicals"/>
+        <activity android:name=".ListOfPYQsActivity"
+            android:label="List of PYQs"/>
         <activity android:name=".UploadDoneActivity" />
         <activity android:name=".AddingQuestionActivity" />
         <activity android:name=".AddingOptionAActivity" />
@@ -67,22 +78,34 @@
         <activity android:name=".AddingOptionCActivity" />
         <activity android:name=".AddingOptionDActivity" />
         <activity android:name=".AddingExplanationActivity" />
-        <activity android:name=".ListOfSetsActivity" />
-        <activity android:name=".ListOfQuestionsActivity" />
-        <activity android:name=".InformationBulletinActivity" />
-        <activity android:name=".CheckQuestionDetails" />
-        <activity android:name=".ProfessionalsActivity" />
-        <activity android:name=".UserProfessionalFirstActivity" />
-        <activity android:name=".UserProfessionalSecondActivity" />
-        <activity android:name=".UserProfessionalThirdOneActivity" />
-        <activity android:name=".UserProfessionalThirdTwoActivity" />
+        <activity android:name=".ListOfSetsActivity"
+            android:label="List Of Sets"/>
+        <activity android:name=".ListOfQuestionsActivity"
+            android:label="List of Questions"/>
+        <activity android:name=".InformationBulletinActivity"
+            android:label="Information Bulletin"/>
+        <activity android:name=".CheckQuestionDetails"
+            android:label="Question Details"/>
+        <activity android:name=".ProfessionalsActivity"
+            android:label="Professionals"/>
+        <activity android:name=".UserProfessionalFirstActivity"
+            android:label="First Professional"/>
+        <activity android:name=".UserProfessionalSecondActivity"
+            android:label="Second Professional"/>
+        <activity android:name=".UserProfessionalThirdOneActivity"
+            android:label="Third-One Professional"/>
+        <activity android:name=".UserProfessionalThirdTwoActivity"
+            android:label="Third-Two Professional"/>
         <activity android:name=".ChaptersActivity" />
         <activity android:name=".MockTestActivity" />
         <activity android:name=".AdminMedicalRelatedPicsActivity" />
         <activity android:name=".AddingMedicalRelatedPicAdminActivity" />
-        <activity android:name=".AdminDoctorsDetails" />
-        <activity android:name=".AdminPPTActivity" />
-        <activity android:name=".AddingPPTActivity" />
+        <activity android:name=".AdminDoctorsDetails"
+            android:label="Doctor Details"/>
+        <activity android:name=".AdminPPTActivity"
+            android:label="List Of PPT"/>
+        <activity android:name=".AddingPPTActivity"
+            android:label="Add PPT"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -102,10 +125,14 @@
         <activity android:name=".AdminFeaturedVideos" />
         <activity android:name=".AdminYoutubeVideos" />
         <activity android:name=".YouTubePlayerViewActivity" />
-        <activity android:name=".PDFViewerActivity" />
-        <activity android:name=".NewQuestionActivity" />
-        <activity android:name=".AdminQuestionDetailsActivity" />
-        <activity android:name=".UserQuestionActivity"></activity>
+        <activity android:name=".PDFViewerActivity"
+            android:label="PDF View"/>
+        <activity android:name=".NewQuestionActivity"
+            android:label="New Question"/>
+        <activity android:name=".AdminQuestionDetailsActivity"
+            android:label="Question Details"/>
+        <activity android:name=".UserQuestionActivity"
+            android:label="Practise"></activity>
     </application>
 
 </manifest>
